--- a/css/style-stats.css
+++ b/css/style-stats.css
@@ -91,7 +91,16 @@
 	
 	
 }
-	.pageHead img{
+	
+	.pageHead .vs {
+	height: 24px;
+	width: 24px;
+	background-color: #000;
+	border-radius: 12px;
+	color: #fff;
+	font-size: 13px;
+	padding: 9px 0px 0px 7px;
+	font-family: 'melbournereg', Helvetica, Roboto, Arial, sans-serif;
 	margin-top: 15px;
 }
 	.pageIntro {
@@ -228,16 +237,41 @@
 
 
 /*Chart Classes*/
-.graph-title {
+radar-chart .title {
 	line-height: 12px;
 	color: #f05a28;
 	font-weight: bold;
 }
-svg {
+radar-chart {
 	font-family: 'melbournereg', Helvetica, Roboto, Arial, sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
 }
-	
+radar-chart .seriesItem {
+	font-size: 16px;
+}
 
+radar-chart .legend{
+	font-size:10px;
+}
 
+radar-chart .axis-label{
+	font-size: 11px;
+	font-weight: bold;
+}
+radar-chart{
+	border-right: solid 1px #cccccc;
+	border-bottom: solid 1px #cccccc;
+	margin-top: 40px;
+	margin-right: 30px;
+}
+radar-chart.chart {
+	float:left;
+	width: 250px;
+	color: #ee542a;
+}
+.batter-list li {
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
